--- a/index.html
+++ b/index.html
@@ -1029,7 +1029,7 @@
 const EXCEL_HOURLY_RATE = typeof HOURLY_RATE === 'number' ? HOURLY_RATE : 25;
 
 /* ========= SMALL UTILS ========= */
-function toCurrencyFmt(){ return { numFmt: '"$"#,##0.00;[Red]-"$"#,##0.00' }; }
+function toCurrencyFmt(){ return { numFmt: '$#,##0.00;[Red]-$#,##0.00' }; }
 function toPercentFmt(){ return { numFmt: '0.0%;[Red]-0.0%' }; }
 function toNumber1(){ return { numFmt: '0.0' }; }
 function todayISO(){ const d=new Date(); return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}-${String(d.getDate()).padStart(2,'0')}`; }
@@ -1059,19 +1059,27 @@ async function buildCompanyWorkbook({ companyName, rows }) {
     { header: 'Gain / Loss ($)', key: 'gain', width: 16 },
   ];
 
-// Title block (wider merge + wrap so long company names never clip)
-ws.mergeCells('A1:K1'); // was A1:G1
-ws.getCell('A1').value = `${companyName}\nHistory & Summary`; // make it 2 lines instead of a long single line
-ws.getCell('A1').font = { bold: true, size: 16 };
-ws.getCell('A1').alignment = { vertical: 'middle', horizontal: 'center', wrapText: true };
-ws.getRow(1).height = 34; // was 24
+// Title block (centered, single line, auto-shrink to avoid clipping)
+ws.mergeCells('A1:G1');              // keep merge only across the visible table width
+ws.getCell('A1').value = `${companyName} — History & Summary`;
+ws.getCell('A1').font = { bold: true, size: 14 };
+ws.getCell('A1').alignment = { vertical: 'middle', horizontal: 'center', shrinkToFit: true };
+ws.getRow(1).height = 22;
 
-// Meta row (wider merge to match the title width)
-ws.mergeCells('A2:K2'); // was A2:D2
+// Meta row (match the same merge width)
+ws.mergeCells('A2:G2');
 ws.getCell('A2').value = `Generated: ${todayISO()} • Hourly Rate: $${EXCEL_HOURLY_RATE}/hr`;
-ws.getCell('A2').font = { color:{ argb:'FF555555' } };
-ws.getCell('A2').alignment = { vertical:'middle' };
+ws.getCell('A2').font = { color:{ argb:'FF555555' }, size: 10 };
+ws.getCell('A2').alignment = { vertical:'middle', horizontal:'center' };
 
+// Ensure consistent widths for the visible table columns
+ws.getColumn(1).width = 10;  // Year
+ws.getColumn(2).width = 12;  // Bid Hours
+ws.getColumn(3).width = 13;  // Actual Hours
+ws.getColumn(4).width = 9;   // +/- %
+ws.getColumn(5).width = 14;  // Bid Price
+ws.getColumn(6).width = 16;  // Actual Price
+ws.getColumn(7).width = 16;  // Gain/Loss
 
   // Header styling (row 4)
   ws.addRow(); // row 3 spacer
@@ -1110,15 +1118,15 @@ ws.getCell('A2').alignment = { vertical:'middle' };
   // Inject formulas for +/- %, Actual Price, Gain/Loss
   for (let r = startDataRow; r <= endDataRow; r++){
     // Percent = (Actual - Bid) / Bid
-    ws.getCell(`D${r}`).value = { formula: `IFERROR((C${r}-B${r})/B${r},0)`, date1904:false };
+    ws.getCell(`D${r}`).value = { formula: `IFERROR((C${r}-B${r})/B${r},0)` };
     ws.getCell(`D${r}`).numFmt = toPercentFmt().numFmt;
 
     // Actual Price = Actual * HourlyRate (put HourlyRate in hidden cell H2)
-    ws.getCell(`F${r}`).value = { formula: `C${r}*$H$2`, date1904:false };
+    ws.getCell(`F${r}`).value = { formula: `C${r}*$H$2` };
     ws.getCell(`F${r}`).numFmt = toCurrencyFmt().numFmt;
 
     // Gain/Loss = Bid Price - Actual Price
-    ws.getCell(`G${r}`).value = { formula: `E${r}-F${r}`, date1904:false };
+    ws.getCell(`G${r}`).value = { formula: `E${r}-F${r}` };
     ws.getCell(`G${r}`).numFmt = toCurrencyFmt().numFmt;
   }
 
@@ -1175,10 +1183,10 @@ ws.getCell('A2').alignment = { vertical:'middle' };
   for (let r = 0; r < (endDataRow - startDataRow + 1); r++){
     const line = vizStart + 1 + r;
     const dataRow = startDataRow + r;
-    ws.getCell(`A${line}`).value = { formula: `TEXT(C${dataRow},"0.0")&"  "&REPT("█",ROUND(IF($I$2=0,0,(C${dataRow}/$I$2))*${bars},0))` };
-    ws.getCell(`B${line}`).value = { formula: `TEXT(F${dataRow},"$#,##0")&"  "&REPT("█",ROUND(IF($J$2=0,0,(F${dataRow}/$J$2))*${bars},0))` };
-    ws.getCell(`A${line}`).font = { name:'Consolas' };
-    ws.getCell(`B${line}`).font = { name:'Consolas' };
+    ws.getCell(`A${line}`).value = { formula: `TEXT(C${dataRow},"0.0")&"  "&REPT("|",ROUND(IF($I$2=0,0,(C${dataRow}/$I$2))*${bars},0))` };
+    ws.getCell(`B${line}`).value = { formula: `TEXT(F${dataRow},"$#,##0")&"  "&REPT("|",ROUND(IF($J$2=0,0,(F${dataRow}/$J$2))*${bars},0))` };
+    ws.getCell(`A${line}`).font = undefined;
+    ws.getCell(`B${line}`).font = undefined;
   }
 
   // Borders around the data table
