--- a/index.html
+++ b/index.html
@@ -1077,14 +1077,12 @@
           // start in view mode
           setEditing(false);
         })();
-      </script>
+      <\/script>
     </body>
     </html>`;
-    }
+}
 
-    //* ======================
-       Generic Modal & Data Helpers
-       ====================== */
+    /* ====================== Generic Modal & Data Helpers ====================== */
     function openModal(modalId, focusElementId) {
       const form = document.querySelector(`#${modalId} form`);
       if (form) form.reset();
@@ -1348,3 +1346,4 @@
 </script>
 </body>
 </html>
+
