--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
   <!-- JSZip for ZIP functionality -->
   <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
   <style>
     /* ========== GLOBAL RESET & BODY ========== */
     :root {
@@ -291,7 +292,7 @@
   <!-- ========== TOP-LEVEL UI ELEMENTS (NOT IN PDF) ========== -->
   <div class="top-actions no-pdf">
     <button class="btn-primary" onclick="downloadPDF()">Download as PDF</button>
-    <button class="btn-secondary" onclick="downloadAllSummariesZip()">Download All Summaries (.zip)</button>
+    <button class="btn-secondary" onclick="downloadExcelWorkbook()">Download Excel Workbook (.xlsx)</button>
     <button class="btn-danger" onclick="clearAllData()">Clear All Data</button>
   </div>
 
@@ -752,33 +753,102 @@
       document.body.classList.remove('pdf-render-mode');
     }
     
-    /* ========= ALL COMPLETED → ZIP OF HTML SUMMARIES ========= */
-    async function downloadAllSummariesZip() {
-      const data = JSON.parse(localStorage.getItem(LS_COMPLETED_KEY) || '[]');
-      if (!data.length) return;
+    /* ========= ALL COMPLETED → EXCEL WORKBOOK (.xlsx) ========= */
+    function downloadExcelWorkbook() {
+      const completed = JSON.parse(localStorage.getItem(LS_COMPLETED_KEY) || '[]');
+      if (!completed.length) return;
 
-      const zip = new JSZip();
-      const root = zip.folder("Completed_Inspection_Summaries");
+      const wb = XLSX.utils.book_new();
 
-      // Build one neat HTML page per completed item.
-      data.forEach(item => {
-        const html = buildCompletedSummaryHTML(item);  // defined below
-        const siteSafe = (item.siteName || 'Site').replace(/[^a-z0-9_\-]+/gi, '_');
-        const projSafe = (item.projectNumber || 'Project').replace(/[^a-z0-9_\-]+/gi, '_');
-
-        // optional folder per site for easier filing
-        const siteFolder = root.folder(siteSafe);
-        siteFolder.file(`${siteSafe}_${projSafe}_Summary.html`, html);
+      completed.forEach(item => {
+        const ws = buildInspectionSheet(item);
+        // Make safe sheet name
+        const safeSite = (item.siteName || 'Site').replace(/[:\/\?\*\[\]]/g, ' ');
+        const safeProj = (item.projectNumber || 'Project').replace(/[:\/\?\*\[\]]/g, ' ');
+        let name = `${safeSite} - ${safeProj}`.slice(0,31).trim() || "Sheet";
+        let base = name, i = 2;
+        while (wb.SheetNames.includes(name)) { name = `${base.slice(0,28)} (${i++})`; }
+        XLSX.utils.book_append_sheet(wb, ws, name);
       });
 
-      const blob = await zip.generateAsync({ type: "blob" });
-      const a = document.createElement('a');
-      a.href = URL.createObjectURL(blob);
-      a.download = `Completed_Summaries_${new Date().toISOString().slice(0,10)}.zip`;
-      document.body.appendChild(a);
-      a.click();
-      URL.revokeObjectURL(a.href);
-      a.remove();
+      XLSX.writeFile(wb, `Completed_Inspections_${new Date().toISOString().slice(0,10)}.xlsx`);
+    }
+
+    /* ========= Build one worksheet with formulas ========= */
+    function buildInspectionSheet(item) {
+      const rate = HOURLY_RATE || 25;
+
+      const aoa = [
+        ["Inspection Summary"],
+        ["Project #", item.projectNumber || "", "", "Rate/hr", rate],
+        ["Site Name", item.siteName || ""],
+        ["Date Completed", formatDate(parseLocalDate(item.dateCompleted)) || ""],
+        [],
+        [],
+        ["Year","Bid Hrs","Actual Hrs","+/- %","Bid Price","Actual Price","Gain/Loss"]
+      ];
+
+      const hist = Array.isArray(item.hoursHistory) ? [...item.hoursHistory] : [];
+      hist.sort((a,b) => (parseInt(b.year)||0) - (parseInt(a.year)||0));
+
+      let startRow = 8;
+      hist.forEach((h, idx) => {
+        const r = startRow + idx;
+        const B = `B${r}`, C = `C${r}`, E = `E${r}`, F = `F${r}`;
+        aoa.push([
+          h.year || "",
+          h.bid ?? "",
+          h.actual ?? "",
+          { f: `IFERROR((${C}-${B})/${B}, "")` },  // +/- %
+          h.bidPrice ?? "",
+          { f: `IFERROR(${C}*$E$2, "")` },        // Actual Price
+          { f: `IFERROR(${E}-${F}, "")` }         // Gain/Loss
+        ]);
+      });
+
+      // Add 20 blank rows pre-seeded with formulas
+      for (let i = 1; i <= 20; i++) {
+        const r = startRow + hist.length + i - 1;
+        const B = `B${r}`, C = `C${r}`, E = `E${r}`, F = `F${r}`;
+        aoa.push([
+          "",
+          "",
+          "",
+          { f: `IFERROR((${C}-${B})/${B}, "")` },
+          "",
+          { f: `IFERROR(${C}*$E$2, "")` },
+          { f: `IFERROR(${E}-${F}, "")` }
+        ]);
+      }
+
+      const ws = XLSX.utils.aoa_to_sheet(aoa);
+
+      // Formats
+      const range = XLSX.utils.decode_range(ws['!ref']);
+      for (let R = 7; R <= range.e.r; R++) {
+        const D = XLSX.utils.encode_cell({ r: R, c: 3 });
+        const E = XLSX.utils.encode_cell({ r: R, c: 4 });
+        const F = XLSX.utils.encode_cell({ r: R, c: 5 });
+        const G = XLSX.utils.encode_cell({ r: R, c: 6 });
+        if (ws[D]) ws[D].z = "0.0%";
+        if (ws[E]) ws[E].z = "$#,##0.00";
+        if (ws[F]) ws[F].z = "$#,##0.00";
+        if (ws[G]) ws[G].z = "$#,##0.00";
+      }
+
+      // Headers & title
+      ws["A1"].s = { font: { bold: true, sz: 14 } };
+      ["A7","B7","C7","D7","E7","F7","G7"].forEach(c => { if(ws[c]) ws[c].s = { font: { bold: true } }; });
+      ["A2","A3","A4","D2"].forEach(c => { if(ws[c]) ws[c].s = { font: { bold: true } }; });
+
+      // Column widths
+      ws["!cols"] = [
+        { wch: 8 }, { wch: 10 }, { wch: 11 }, { wch: 9 },
+        { wch: 12 }, { wch: 13 }, { wch: 11 }
+      ];
+
+      ws["!ref"] = XLSX.utils.encode_range({ s: { r:0, c:0 }, e: { r: aoa.length-1, c: 6 } });
+      return ws;
     }
     
     function buildCompletedSummaryHTML(item) {
