--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
   <!-- ========== TOP-LEVEL UI ELEMENTS (NOT IN PDF) ========== -->
   <div class="top-actions no-pdf">
     <button class="btn-primary" onclick="downloadPDF()">Download as PDF</button>
-    <button class="btn-secondary" onclick="downloadExcelWorkbook()">Download Excel Workbook (.xlsx)</button>
+    <button class="btn-secondary" onclick="downloadAllExcelFiles()">Download All Excel Summaries</button>
     <button class="btn-danger" onclick="clearAllData()">Clear All Data</button>
   </div>
 
@@ -753,28 +753,26 @@
       document.body.classList.remove('pdf-render-mode');
     }
     
-    /* ========= ALL COMPLETED → EXCEL WORKBOOK (.xlsx) ========= */
-    function downloadExcelWorkbook() {
+    /* ========= EACH COMPLETED → OWN EXCEL FILE ========= */
+    function downloadAllExcelFiles() {
       const completed = JSON.parse(localStorage.getItem(LS_COMPLETED_KEY) || '[]');
       if (!completed.length) return;
 
-      const wb = XLSX.utils.book_new();
-
       completed.forEach(item => {
+        const wb = XLSX.utils.book_new();
         const ws = buildInspectionSheet(item);
-        // Make safe sheet name
-        const safeSite = (item.siteName || 'Site').replace(/[:\/\?\*\[\]]/g, ' ');
-        const safeProj = (item.projectNumber || 'Project').replace(/[:\/\?\*\[\]]/g, ' ');
-        let name = `${safeSite} - ${safeProj}`.slice(0,31).trim() || "Sheet";
-        let base = name, i = 2;
-        while (wb.SheetNames.includes(name)) { name = `${base.slice(0,28)} (${i++})`; }
-        XLSX.utils.book_append_sheet(wb, ws, name);
+        XLSX.utils.book_append_sheet(wb, ws, "Summary");
+
+        // Sanitize filename (sitename_Hours_Summary.xlsx)
+        let safeSite = (item.siteName || "Site").replace(/[^A-Za-z0-9 _-]/g, "");
+        if (!safeSite.trim()) safeSite = "Site";
+        const filename = `${safeSite}_Hours_Summary.xlsx`;
+
+        XLSX.writeFile(wb, filename);
       });
-
-      XLSX.writeFile(wb, `Completed_Inspections_${new Date().toISOString().slice(0,10)}.xlsx`);
     }
-
-    /* ========= Build one worksheet with formulas ========= */
+    
+    /* ========= Build one worksheet with clean layout & totals ========= */
     function buildInspectionSheet(item) {
       const rate = HOURLY_RATE || 25;
 
@@ -782,12 +780,14 @@
         ["Inspection Summary"],
         ["Project #", item.projectNumber || "", "", "Rate/hr", rate],
         ["Site Name", item.siteName || ""],
-        ["Date Completed", formatDate(parseLocalDate(item.dateCompleted)) || ""],
+        // Spread "Date Completed" across A & B for neatness
+        ["Date Completed", formatDate(parseLocalDate(item.dateCompleted)) || "", ""],
         [],
         [],
         ["Year","Bid Hrs","Actual Hrs","+/- %","Bid Price","Actual Price","Gain/Loss"]
       ];
 
+      // Sort years newest first
       const hist = Array.isArray(item.hoursHistory) ? [...item.hoursHistory] : [];
       hist.sort((a,b) => (parseInt(b.year)||0) - (parseInt(a.year)||0));
 
@@ -806,7 +806,7 @@
         ]);
       });
 
-      // Add 20 blank rows pre-seeded with formulas
+      // Add 20 blank rows for future entries
       for (let i = 1; i <= 20; i++) {
         const r = startRow + hist.length + i - 1;
         const B = `B${r}`, C = `C${r}`, E = `E${r}`, F = `F${r}`;
@@ -821,9 +821,23 @@
         ]);
       }
 
+      // Add Totals/Averages row
+      const lastDataRow = startRow + hist.length + 20 - 1;
+      const totalRow = lastDataRow + 2;
+      aoa.push([]);
+      aoa.push([
+        "Totals / Averages",
+        { f: `SUM(B8:B${lastDataRow})` },             // Sum Bid Hrs
+        { f: `SUM(C8:C${lastDataRow})` },             // Sum Actual Hrs
+        { f: `IFERROR((C${totalRow}-B${totalRow})/B${totalRow}, "")` }, // % diff from totals
+        { f: `SUM(E8:E${lastDataRow})` },             // Sum Bid Price
+        { f: `SUM(F8:F${lastDataRow})` },             // Sum Actual Price
+        { f: `SUM(G8:G${lastDataRow})` }              // Sum Gain/Loss
+      ]);
+
       const ws = XLSX.utils.aoa_to_sheet(aoa);
 
-      // Formats
+      // Number formats
       const range = XLSX.utils.decode_range(ws['!ref']);
       for (let R = 7; R <= range.e.r; R++) {
         const D = XLSX.utils.encode_cell({ r: R, c: 3 });
@@ -836,16 +850,24 @@
         if (ws[G]) ws[G].z = "$#,##0.00";
       }
 
-      // Headers & title
+      // Professional look
       ws["A1"].s = { font: { bold: true, sz: 14 } };
-      ["A7","B7","C7","D7","E7","F7","G7"].forEach(c => { if(ws[c]) ws[c].s = { font: { bold: true } }; });
       ["A2","A3","A4","D2"].forEach(c => { if(ws[c]) ws[c].s = { font: { bold: true } }; });
+      ["A7","B7","C7","D7","E7","F7","G7"].forEach(c => { if(ws[c]) ws[c].s = { font: { bold: true } }; });
 
       // Column widths
       ws["!cols"] = [
-        { wch: 8 }, { wch: 10 }, { wch: 11 }, { wch: 9 },
-        { wch: 12 }, { wch: 13 }, { wch: 11 }
+        { wch: 14 },   // Year
+        { wch: 12 },   // Bid Hrs
+        { wch: 12 },   // Actual Hrs
+        { wch: 10 },   // %
+        { wch: 14 },   // Bid Price
+        { wch: 14 },   // Actual Price
+        { wch: 14 }    // Gain/Loss
       ];
+
+      // Row heights for header
+      ws["!rows"] = [{ hpt: 22 }, { hpt: 18 }, { hpt: 18 }, { hpt: 18 }];
 
       ws["!ref"] = XLSX.utils.encode_range({ s: { r:0, c:0 }, e: { r: aoa.length-1, c: 6 } });
       return ws;
