--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <title>Omni Technologies Weekly I&T Progress Report</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Google Fonts: Inter -->
-  <link rel="preconnect" href="[https://fonts.googleapis.com](https://fonts.googleapis.com)">
-  <link rel="preconnect" href="[https://fonts.gstatic.com](https://fonts.gstatic.com)" crossorigin>
-  <link href="[https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap](https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap)" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <!-- jsPDF, html2canvas and html2pdf (CDN versions) -->
-  <script src="[https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js](https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js)"></script>
-  <script src="[https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js](https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js)"></script>
-  <script src="[https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js](https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js)"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
   <!-- JSZip for ZIP functionality -->
-  <script src="[https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js](https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js)"></script>
-  <script src="[https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js](https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js)"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
   <style>
     /* ========== GLOBAL RESET & BODY ========== */
     :root {
@@ -314,7 +314,7 @@
   <!-- ========== PDF CONTAINER (REPORTING ELEMENTS) ========== -->
   <div id="pdfContainer">
     <div class="report-header">
-        <img src="[https://lh3.googleusercontent.com/p/AF1QipPDBEMV5-fUJnHA9n6iGT9uyqTEL3799aOA-G8M=s680-w680-h510-rw](https://lh3.googleusercontent.com/p/AF1QipPDBEMV5-fUJnHA9n6iGT9uyqTEL3799aOA-G8M=s680-w680-h510-rw)" alt="Omni Technologies Logo" class="report-logo">
+        <img src="https://lh3.googleusercontent.com/p/AF1QipPDBEMV5-fUJnHA9n6iGT9uyqTEL3799aOA-G8M=s680-w680-h510-rw" alt="Omni Technologies Logo" class="report-logo">
         <h1>Omni Technologies Weekly I&T Progress Report</h1>
     </div>
     
@@ -811,20 +811,18 @@
         ]);
       });
 
-      // Add 20 future rows with pre-filled Years counting up
-      let lastYear = hist.length ? parseInt(hist[hist.length - 1].year) || new Date().getFullYear() : new Date().getFullYear();
+      // Add 20 blank rows for future entries
       for (let i = 1; i <= 20; i++) {
-        const nextYear = lastYear + i;
         const r = startRow + hist.length + i - 1;
         const B = `B${r}`, C = `C${r}`, E = `E${r}`, F = `F${r}`;
         aoa.push([
-          nextYear,                        // ✅ pre-filled Year
-          "",                              // Bid Hrs (staff fills in)
-          "",                              // Actual Hrs
-          { f: `IFERROR((${C}-${B})/${B}, "")` }, // % diff
-          "",                              // Bid Price
-          { f: `IFERROR(${C}*$E$2, "")` },        // Actual Price
-          { f: `IFERROR(${E}-${F}, "")` }         // Gain/Loss
+          "",
+          "",
+          "",
+          { f: `IFERROR((${C}-${B})/${B}, "")` },
+          "",
+          { f: `IFERROR(${C}*$E$2, "")` },
+          { f: `IFERROR(${E}-${F}, "")` }
         ]);
       }
 
@@ -874,15 +872,6 @@
       ws["!rows"][1] = { hpt: 18 };
       ws["!rows"][2] = { hpt: 18 };
       ws["!rows"][3] = { hpt: 18 };
-
-      // Bold + locked Year column (A)
-      for (let R = 7; R <= range.e.r; R++) {
-        const addr = XLSX.utils.encode_cell({ r: R, c: 0 }); // column A
-        if (ws[addr]) {
-          ws[addr].s = Object.assign({}, ws[addr].s, { font: { bold: true }, alignment: { horizontal: "center" } });
-          ws[addr].l = { hidden: true }; // prevent accidental edits (viewers only in Excel desktop)
-        }
-      }
 
       ws["!ref"] = XLSX.utils.encode_range({ s: { r:0, c:0 }, e: { r: aoa.length-1, c: 6 } });
       return ws;
@@ -1460,4 +1449,3 @@
 </script>
 </body>
 </html>
-
